# smores_document

./: README.md  README.txt  README.txt~  doc_smores_motherboard.txt  main_verbose.cpp
Calibration_test/: atm_cali.c~  common_macro.h  main_303.cpp~  main_atm.cpp~  stm_cali.cpp~  wiper_encoder.c~  wiper_encoder_cali.h~
Calibration_test/303_main/: main.cpp
Calibration_test/atmega_main/: main.c~
Calibration_test/calibration/303/: main.cpp  stm_cali.cpp  stm_cali.cpp~
Calibration_test/calibration/atmega/: atm_cali.c  main.c  wiper_encoder_cali.c
Calibration_test/face_board_adc_test/: main.c
Calibration_test/wiper_encoder/: main.c
Calibration_test/wiper_encoder_calibration/: main.cpp
Calibration_test/wiper_encoder_test/: main.c  wiper_encoder.c
Embedded_cal_test/: .gitignore  README.md  notes_from_Chao.txt
Embedded_cal_test/atmega/: README.md
Embedded_cal_test/atmega/ATmega88Template/src/: main.c
Embedded_cal_test/atmega/Utility/: README.txt
Embedded_cal_test/atmega/atmega/: Makefile
Embedded_cal_test/atmega/atmega/atmega88a_common/inc/: PWM.h  TWI_slave.h  USART.h  system_clock.h
Embedded_cal_test/atmega/atmega/atmega88a_common/src/: PWM.c  TWI_slave.c  USART.c  system_clock.c
Embedded_cal_test/atmega/atmega/common_library/inc/: common_peripherals.h  m_general.h
Embedded_cal_test/atmega/atmega/common_library/src/: common_peripherals.c
Embedded_cal_test/atmega/atmega/smores_common_library/inc/: atm_cali.h  drive_coil.h  medfilt.h  wiper_encoder.h
Embedded_cal_test/atmega/atmega/smores_common_library/src/: drive_coil.c  medfilt.c  wiper_encoder.c
Embedded_cal_test/atmega/example/ATmega88_PWM/inc/: m_general.h
Embedded_cal_test/atmega/example/ATmega88_PWM/src/: PWM.c  main.c
Embedded_cal_test/atmega/example/fundamental_library/ATmega88_ADC/: ADC.c  ADC.h
Embedded_cal_test/atmega/example/fundamental_library/ATmega88_PWM/: PWM.h
Embedded_cal_test/atmega/example/fundamental_library/ATmega88_TWI/: TWI.c  TWI.h
Embedded_cal_test/ecosystem/: README_header_file_conventions.txt  README_index.txt
Embedded_cal_test/ecosystem/doxygen/: Doxyfile
Embedded_cal_test/ecosystem/eagle_common/: useful_eagle_commands.txt
Embedded_cal_test/ecosystem/eagle_common/blocks/: Oscillator_ASTX-H11.sch  Radio_AT86RF.sch  Regulator_Switching_MCP16323.sch  Regulator_Switching_TPS6216X_TPS6217X.sch  Sensor_IMU_MPU-6500_I2C.sch  Sensor_Pressure_MS5611-01BA03_SPI.sch  Standard_Servo_Header.sch
Embedded_cal_test/ecosystem/eagle_common/cam/: LaenPCBOrder-4layer-noNames.cam  LaenPCBOrder-4layer.cam  gerb274x-2layer_paul_no_mirror.cam
Embedded_cal_test/ecosystem/eagle_common/dru/: 4pcb 33 each.dru  LaenPCBOrder.dru
Embedded_cal_test/ecosystem/eagle_common/lbr/: block_parts.lbr  neels.lbr  piccoli.lbr  upenn_connector.lbr  upenn_digital.lbr  upenn_diode.lbr  upenn_mechanical.lbr  upenn_mosfet.lbr  upenn_switch.lbr  zz-upenn 2.lbr  zz-upenn.lbr
Embedded_cal_test/ecosystem/eagle_common/scr/: font-all-vector.scr  keybinding.scr
Embedded_cal_test/ecosystem/eagle_common/ulp/: bom-ex.cfg  bom-ex.ulp  renumber_by_page.ulp
Embedded_cal_test/ecosystem/mat_common/user_lib/mex/: AppendCRC.mexa64  AppendCRC.mexmaci64  NumBytes.mexa64  NumBytes.mexmaci64  mexPeekPacket.cpp  mexPeekPacket.mexa64  mexPeekPacket.mexmaci64  typecastx.mexa64  typecastx.mexmaci64
Embedded_cal_test/ecosystem/mat_common/user_lib/src/: BatteryMonitor.m  BrushlessController.m  BundleMsg.m  DEMO_QUAD_GP.m  DEMO_QUAD_GP_ID.m  DEMO_QUAD_XBOX.m  DEMO_QUAD_XBOX_VICON.m  DEMO_SMART_XBOX.m  PulsingController.m  UnpackMsg.m  encodeSerial.m  encodeSerial_pico.m  getArgVal.m  getViconState.m  joyVehicle.m  joyVehicle_ID.m  load_params.m  pathQuery.m  quadrotor_PPR.m  quadrotor_PPR_ID.m  rc_mex.m  read_rc.m  serialTest.m  serial_test.m  serial_test2.m  smart_copter.m
Embedded_cal_test/ecosystem/projects/: Makefile
Embedded_cal_test/ecosystem/projects/IR/stm32f37x/: Sensor.txt  Trial2.txt  Trial3.txt  Trial4.txt  Trial6.txt
Embedded_cal_test/ecosystem/projects/TestingStand/stm32f37x/: Makefile
Embedded_cal_test/ecosystem/projects/allpcb_IDs_CPP/stm32f37x/: Makefile
Embedded_cal_test/ecosystem/projects/anticogging_brushless_driver/mat/: Anticogging.m  SpinFast.m  SpinSlow.m  appliedV2IdealV.m  calcWaveErrors.m  coggingCompareFrequency.m  coggingCompareResolution.m  coggingCompareResolutionOld.m  coggingMethodComparison.m  coggingPositionBased.m  coggingPositionBased2IdealVFit.m  coggingSpeedBased.m  coggingSpeedBased2IdealVFit.m  findStiction.m  findSwitchTicks.m  getCogMaps.m  getRolling.m  idealV2AppliedV.m  idealV2Torque.m  notchFilter.m  plotCoggingCompareResolution.m  plotProcessedCoggingCompareResolution.m  plotProcessedPairs.m  processCoggingCompareResolution.m  tickMonteCarlo.m  torque2IdealV.m  uploadAnticogging.m
Embedded_cal_test/ecosystem/projects/gabby_openocd/: Makefile_gdb
Embedded_cal_test/ecosystem/py_common/user_lib/src/: README  (+13 more)
Embedded_cal_test/ecosystem/stm32/: Makefile
Embedded_cal_test/ecosystem/tools/dfu-util/: m4_driver.cfg
Embedded_cal_test/gumstix/ros_gaz/gazebo_world_plugins/: CMakeLists.txt  WorldController.cc  WorldController.hh  package.xml
Embedded_cal_test/gumstix/ros_gaz/publisher/: CMakeLists.txt  Cmd.msg  commands.cpp  commands.h  package.xml  ros_gaz_talker.cpp
Embedded_cal_test/gumstix/smores_brain_scripts/: muscleInfo.py  ros_startup_tmux.sh  udp_test.py  wirelesscheck.sh
Embedded_cal_test/matlab_scripts/: MyKeyPress_Callback.m  m4_motor_control.m  udp_test.m
Embedded_cal_test/old_code/M4_303/: README.md
Embedded_cal_test/old_code/SMORES_code/ATmega88/: Makefile  PWM.c  PWM.h  USART.c  drive_coil.c  drive_coil.h  main.c
Embedded_cal_test/old_code/SMORES_code/STM32_F303/: Makefile
Embedded_cal_test/old_code/cc3000_stm32f303/inc/: mGeneral.h  stm32_cc3000platform_config.h
Embedded_cal_test/old_code/cc3000_stm32f303/lib/: Makefile
Embedded_cal_test/old_code/cc3000_stm32f303/src/: CC3000_socket.c  stm32_cc3000.c
Embedded_cal_test/old_code/smores/atmega88u/: README
Embedded_cal_test/pseudocode/: 303_pseudocode.c  ATMega_pseudocode.c
(+747 files in other folders)
